--- a/styles1.css
+++ b/styles1.css
@@ -3,9 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-body {
-    /* font-family: Arial, Helvetica, sans-serif; */
-}
+
 .home-container {
     background-image: url(/img1/forsaken-films-C1W7ve6ozQc-unsplash.jpg);
     background-position: bottom center;
@@ -210,11 +208,13 @@ footer p {
     height: 230px;
     margin: 0 20px;
     margin-bottom: 20px;
+    border: 1px solid #3e3e3e;
     border-radius: 10px;
+    box-shadow: -3px -3px 10px 1px rgba(62, 62, 62, .5), 3px 3px 10px 1px rgba(62, 62, 62, .5);
 }
 .project h4 {
     margin: 30px 0;
-    color: #fff;
+    color: #000;
     border-bottom: 2px solid green;
 }
 
