Changed media style for every screen size

--- a/styles1.css
+++ b/styles1.css
@@ -14,6 +14,7 @@
 .home {
     max-width: 750px;
     margin: auto;
+    padding: 0 20px;
 }
 
 .home p {
@@ -62,9 +63,21 @@ nav ul a:hover {
     font-size: larger;
 }
 .home hr {
-    width: 700px;
+    width: 500px;
     margin: auto;
     border-bottom: 1px solid darkgrey;
+}
+@media(max-width: 414px) {
+    .home hr {
+        width: 350px;
+        margin: auto;
+    }
+}
+@media(max-width: 280px) {
+    .home hr {
+        width: 250px;
+        margin: auto;
+    }
 }
 /* About styling */
 .about {
@@ -75,11 +88,11 @@ nav ul a:hover {
 }
 @media(max-width: 576px) {
     .about {
+        padding: 70px 30px;
         display: flex;
         flex-direction: column;
         text-align: center;
         align-items: center;
-        padding: 70px 30px;
     }
     .about img {
         margin-bottom: 30px;
@@ -88,14 +101,32 @@ nav ul a:hover {
     }
 }
 
-@media(min-width: 576px) {
+@media(max-width: 876px) {
     .about {
+        padding: 70px 30px;
+        font-size: 20px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+
+    .about img {
+        margin-bottom: 30px;
+        position: relative;
+        left: 35px;
+    }
+}
+
+@media(min-width: 876px) {
+    .about {
+        padding: 70px 30px;
         display: flex;
     }
     .contact-details {
         width: 500px;
-            display: flex;
-            justify-content: space-between;
+        display: flex;
+        justify-content: space-between;
     }
     .contact .btn {
         width: 300px;
@@ -134,7 +165,24 @@ nav ul a:hover {
     }
 }
 
-@media(min-width: 576px) {
+@media(max-width: 876px) {
+    .academic {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        font-size: 20px;
+        padding: 0 30px;
+    }
+
+    .academic .edu {
+        margin-bottom: 20px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media(min-width: 876px) {
     .academic {
         display: flex;
     }
@@ -168,8 +216,34 @@ nav ul a:hover {
         width: 500px;
     }
 }
+@media(max-width: 414px) {
+    .language {
+        width: 350px;
+    }
+}
 
-@media(min-width: 576px) {
+@media(max-width: 876px) {
+    .skills {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 30px;
+        text-align: center;
+    }
+
+    .skill {
+        margin-top: 20px;
+        margin-bottom: 30px;
+        position: relative;
+        left: 55px;
+    }
+
+    .language {
+        width: 650px;
+    }
+}
+
+@media(min-width: 876px) {
     .skills {
         display: flex;
     }
@@ -218,7 +292,7 @@ footer p {
     border-bottom: 2px solid green;
 }
 
-@media(min-width: 576px) {
+@media(min-width: 876px) {
     .project {
         display: flex;
         flex-direction: column;
@@ -249,16 +323,35 @@ footer p {
         top: 200px;
     }
 }
+@media(max-width: 876px) {
+    .project img {
+        width: 650px;
+        margin-left: 20px;
+        margin-right: 25px;
+    }
+
+    .project {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 @media(max-width: 576px) {
     .project img {
         width: 500px;
-        padding-left: 20px;
-        padding-right: 25px;
+        margin-left: 20px;
+        margin-right: 25px;
     }
     .project {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+}
+@media(max-width: 414px) {
+    .project img {
+        width: 350px;
     }
 }
 
